--- a/Proyecto comprension de lectura web/compresion Final/Servidor Env/variables.env
+++ b/Proyecto comprension de lectura web/compresion Final/Servidor Env/variables.env
@@ -4,5 +4,10 @@ LOCAL_CLIENT_APP = http://localhost:3000
 REMOTE_CLIENT_APP = https://appnode.editorialcardinal.com.co
 LOCAL_SERVER_API = http://localhost:4000
 REMOTE_SERVER_API = https://appnodeapi.editorialcardinal.com.co
+HOST_DB=editorialcardinal.com.co
+USER=editoria_arturocv
+PASSWORD=ttVUej%U;r33
+DATABASE=editoria_comprension2
+SECRETA=palabrasecreta
 
 
